--- a/index.html
+++ b/index.html
@@ -1,17 +1,158 @@
 <!DOCTYPE html>
-    <html lang="en">
-        <head>
-            <meta charset="utf-8" />
-            <meta name="viewport" content="width=device-width, initial-scale=1" />
-            <title>Understandly</title>
-            <link rel="stylesheet" href="styles.css" />
-        </head>
-        <body>
-            <header>
-            <h1>Welcome to Understandly</h1>
-            </header>
-            <main>
-            <p>Your go-to platform for understanding complex topics easily.</p>
-            </main>
-        </body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Understandly</title>
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <header class="site-header">
+            <div class="container header-inner">
+                <a class="brand" href="#home">Understandly</a>
+                <nav class="nav">
+                    <a href="#home" class="nav-link">Home</a>
+                    <a href="#subjects" class="nav-link">Subjects</a>
+                    <a href="#cs" class="nav-link">CS</a>
+                </nav>
+            </div>
+        </header>
+
+        <main class="container">
+            <div id="app" class="view">
+                <!-- Home -->
+                <section id="home" class="section">
+                    <h1>Welcome to Understandly</h1>
+                    <p class="lead">Learn core concepts after each chapter so you never fall behind.</p>
+                    <p><a class="btn btn-accent" href="#subjects">Start Learning</a></p>
+                </section>
+
+                <!-- Subjects -->
+                <section id="subjects" class="section">
+                    <h2>Subjects</h2>
+                    <div class="card-grid">
+                        <article class="card">
+                            <h3>Computer Science</h3>
+                            <p>Kick off with Python basics. Variables first.</p>
+                            <p>
+                                <a class="btn" href="#cs">Open</a>
+                            </p>
+                        </article>
+                    </div>
+                </section>
+
+                <!-- CS Overview -->
+                <section id="cs" class="section">
+                    <h2>Computer Science</h2>
+                    <p>Available now: Python Basics — Variables.</p>
+                    <ul>
+                        <li><a href="#cs-variables">Lesson: Variables in Python</a></li>
+                        <li><a href="#cs-quiz">Quick Quiz (5 questions)</a></li>
+                        <li><a href="#cs-project">Mini Project</a></li>
+                    </ul>
+                </section>
+
+                <!-- CS Lesson: Variables -->
+                <section id="cs-variables" class="section">
+                    <h2>Variables in Python</h2>
+                    <p>Variables store data so you can use it later.</p>
+                    <div class="code-block">
+<pre><code># Assignment
+name = "Maya"   # string
+age = 19         # integer
+price = 12.99    # float
+is_student = True  # boolean
+
+# Reassignment
+age = age + 1
+
+# Naming rules
+# - start with a letter or _
+# - use letters, numbers, _
+# - case-sensitive: total and Total are different
+</code></pre>
+                    </div>
+                    <p class="muted">Tip: use clear names like total_price, not tp.</p>
+                </section>
+
+                <!-- CS Quiz Placeholder -->
+                <section id="cs-quiz" class="section">
+                    <h2>Quick Quiz: Variables</h2>
+                    <p class="muted">This is a static scaffold. Add JS in <code>main.js</code> to check answers and show a score.</p>
+                    <form id="quiz-form">
+                        <ol class="quiz-list">
+                            <li class="quiz-item">
+                                <p>1) Which is a valid Python variable name?</p>
+                                <label><input type="radio" name="q1" value="a" /> 1stVar</label>
+                                <label><input type="radio" name="q1" value="b" /> total_price</label>
+                                <label><input type="radio" name="q1" value="c" /> total-price</label>
+                                <div class="answer" data-answer="b"></div>
+                            </li>
+                            <li class="quiz-item">
+                                <p>2) What does this print? <code>x = 2; x = x + 3; print(x)</code></p>
+                                <label><input type="radio" name="q2" value="a" /> 2</label>
+                                <label><input type="radio" name="q2" value="b" /> 3</label>
+                                <label><input type="radio" name="q2" value="c" /> 5</label>
+                                <div class="answer" data-answer="c"></div>
+                            </li>
+                            <li class="quiz-item">
+                                <p>3) Best variable name to store number of students?</p>
+                                <label><input type="radio" name="q3" value="a" /> s</label>
+                                <label><input type="radio" name="q3" value="b" /> numberOfStudents</label>
+                                <label><input type="radio" name="q3" value="c" /> students_count</label>
+                                <div class="answer" data-answer="c"></div>
+                            </li>
+                            <li class="quiz-item">
+                                <p>4) Which type is <code>True</code>?</p>
+                                <label><input type="radio" name="q4" value="a" /> int</label>
+                                <label><input type="radio" name="q4" value="b" /> str</label>
+                                <label><input type="radio" name="q4" value="c" /> bool</label>
+                                <div class="answer" data-answer="c"></div>
+                            </li>
+                            <li class="quiz-item">
+                                <p>5) Is <code>Total</code> the same as <code>total</code>?</p>
+                                <label><input type="radio" name="q5" value="a" /> Yes</label>
+                                <label><input type="radio" name="q5" value="b" /> No</label>
+                                <div class="answer" data-answer="b"></div>
+                            </li>
+                        </ol>
+                        <button type="button" class="btn" disabled title="Add JS to enable scoring">Check Answers</button>
+                    </form>
+                </section>
+
+                <!-- CS Mini Project -->
+                <section id="cs-project" class="section">
+                    <h2>Mini Project: Simple Budget Helper</h2>
+                    <p>Practice variables by tracking a few expenses and a budget.</p>
+                    <ol>
+                        <li>Create variables: <code>budget</code>, <code>rent</code>, <code>food</code>, <code>transport</code>.</li>
+                        <li>Compute <code>total_expenses</code> and <code>remaining = budget - total_expenses</code>.</li>
+                        <li>Print a summary like: <code>Remaining budget: $X</code>.</li>
+                    </ol>
+                    <details>
+                        <summary>Starter (optional)</summary>
+                        <div class="code-block"><pre><code>budget = 1000
+rent = 550
+food = 180
+transport = 60
+
+total_expenses = rent + food + transport
+remaining = budget - total_expenses
+
+print("Total expenses:", total_expenses)
+print("Remaining budget:", remaining)
+</code></pre></div>
+                    </details>
+                </section>
+            </div>
+        </main>
+
+        <footer class="site-footer">
+            <div class="container">
+                <small>Built with ❤️ for learners. Published on GitHub Pages.</small>
+            </div>
+        </footer>
+
+        <script src="main.js" defer></script>
+    </body>
     </html>
