fixed more bugs

--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
                         <li>Print a summary like: <code>Remaining budget: $X</code>.</li>
                     </ol>
                     <details>
-                        <summary>Try it in your browser (JS)</summary>
-                        <p class="muted">Fetch a page with <code>&lt;pre&gt;&lt;code&gt;</code> blocks or paste JS below and run it. Output appears here.</p>
+                        <summary>Try it in your browser (Python)</summary>
+                        <p class="muted">Fetch a page with <code>&lt;pre&gt;&lt;code&gt;</code> Python blocks or paste Python below and run it. Output appears here.</p>
                         <div class="terminal-controls">
                             <input id="fetch-url" type="url" placeholder="https://example.com/page.html" aria-label="Remote URL" />
                             <button id="fetch-run" class="btn">Fetch & Run</button>
                         </div>
                         <div class="manual-run">
-                            <textarea id="manual-code" rows="6" placeholder="// Paste JS code here"></textarea>
+                            <textarea id="manual-code" rows="6" placeholder="# Paste Python code here\nprint('hello from Python')"></textarea>
                             <button id="manual-run" class="btn btn-accent">Run Code</button>
                         </div>
                         <div id="terminal-output" class="terminal" aria-live="polite"></div>
