fixed more bugs

--- a/index.html
+++ b/index.html
@@ -104,11 +104,8 @@
                     </ol>
                     <details>
                         <summary>Try it in your browser (Python)</summary>
-                        <p class="muted">Fetch a page with <code>&lt;pre&gt;&lt;code&gt;</code> Python blocks or paste Python below and run it. Output appears here.</p>
-                        <div class="terminal-controls">
-                            <input id="fetch-url" type="url" placeholder="https://example.com/page.html" aria-label="Remote URL" />
-                            <button id="fetch-run" class="btn">Fetch & Run</button>
-                        </div>
+                        <p class="muted">Paste Python below and run it. Output appears in the terminal box.</p>
+                        
                         <div class="manual-run">
                             <textarea id="manual-code" rows="6" placeholder="# Paste Python code here\nprint('hello from Python')"></textarea>
                             <button id="manual-run" class="btn btn-accent">Run Code</button>
