changed questions and added a way to clear answers

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                     <form id="quiz-form">
                         <ol class="quiz-list">
                             <li class="quiz-item">
-                                <p>1) Which is a valid Python variable name?</p>
-                                <label><input type="radio" name="q1" value="a" /> 1stVar</label>
-                                <label><input type="radio" name="q1" value="b" /> total_price</label>
-                                <label><input type="radio" name="q1" value="c" /> total-price</label>
-                                <div class="answer" data-answer="b"></div>
+                                <p>1) What does a variable do?</p>
+                                <label><input type="radio" name="q1" value="a" /> Stores data</label>
+                                <label><input type="radio" name="q1" value="b" /> Tries to find a value in the program</label>
+                                <label><input type="radio" name="q1" value="c" /> Deletes data</label>
+                                <div class="answer" data-answer="a"></div>
                             </li>
                             <li class="quiz-item">
                                 <p>2) What does this print? <code>x = 2; x = x + 3; print(x)</code></p>
@@ -85,10 +85,11 @@
                                 <div class="answer" data-answer="c"></div>
                             </li>
                             <li class="quiz-item">
-                                <p>4) Is <code>Total</code> the same as <code>total</code>?</p>
-                                <label><input type="radio" name="q4" value="a" /> Yes</label>
-                                <label><input type="radio" name="q4" value="b" /> No</label>
-                                <div class="answer" data-answer="b"></div>
+                                <p>4) What is the difference between a string and an int?</p>
+                                <label><input type="radio" name="q4" value="a" /> a string holds text, an int holds a number</label>
+                                <label><input type="radio" name="q4" value="b" /> a string holds numbers,an int holds text</label>
+                                <label><input type="radio" name="q4" value="c" /> strings hold a list and int hold a single number</label>
+                                <div class="answer" data-answer="a"></div>
                             </li>
                         </ol>
                         <button type="button" class="btn" disabled title="Add JS to enable scoring">Check Answers</button>
