changed questions and added a way to clear answers

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                             </li>
                         </ol>
                         <button type="button" class="btn" disabled title="Add JS to enable scoring">Check Answers</button>
+                        <button type="button" class="btn" id="quiz-clear" title="Clear all selected answers">Clear Answers</button>
                     </form>
                 </section>
 
