--- a/index.html
+++ b/index.html
@@ -63,33 +63,39 @@
                     <form id="quiz-form">
                         <ol class="quiz-list">
                             <li class="quiz-item">
-                                <p>1) What does a variable do?</p>
+                                <p>What does a variable do?</p>
                                 <label><input type="radio" name="q1" value="a" /> Stores data</label>
                                 <label><input type="radio" name="q1" value="b" /> Tries to find a value in the program</label>
                                 <label><input type="radio" name="q1" value="c" /> Deletes data</label>
                                 <div class="answer" data-answer="a"></div>
                             </li>
                             <li class="quiz-item">
-                                <p>2) What does this print? <code>x = 2; x = x + 3; print(x)</code></p>
+                                <p> What does this print? <code>x = 2; x = x + 3; print(x)</code></p>
                                 <label><input type="radio" name="q2" value="a" /> 2</label>
                                 <label><input type="radio" name="q2" value="b" /> 3</label>
                                 <label><input type="radio" name="q2" value="c" /> 5</label>
                                 <div class="answer" data-answer="c"></div>
                             </li>
                             <li class="quiz-item">
-                                <p>3) Which type is <code>True</code>?</p>
+                                <p> Which type is <code>True</code>?</p>
                                 <label><input type="radio" name="q3" value="a" /> int</label>
                                 <label><input type="radio" name="q3" value="b" /> str</label>
                                 <label><input type="radio" name="q3" value="c" /> bool</label>
                                 <div class="answer" data-answer="c"></div>
                             </li>
                             <li class="quiz-item">
-                                <p>4) What is the difference between a string and an int?</p>
+                                <p> What is the difference between a string and an int?</p>
                                 <label><input type="radio" name="q4" value="a" /> a string holds text, an int holds a number</label>
                                 <label><input type="radio" name="q4" value="b" /> a string holds numbers,an int holds text</label>
                                 <label><input type="radio" name="q4" value="c" /> strings hold a list and int hold a single number</label>
                                 <div class="answer" data-answer="a"></div>
                             </li>
+                            <li class="quiz-item">
+                                <p> What will this code do? <code>name = "Alice"; print("Hello, " + name)</code></p>
+                                <label><input type="radio" name="q5" value="a" /> Print "Hello, Alice"</label>
+                                <label><input type="radio" name="q5" value="b" /> Print "Hello, name"</label>
+                                <label><input type="radio" name="q5" value="c" /> Cause an error</label>
+                                <div class="answer" data-answer="a"></div>
                         </ol>
                         <button type="button" class="btn" disabled title="Add JS to enable scoring">Check Answers</button>
                         <button type="button" class="btn" id="quiz-clear" title="Clear all selected answers">Clear Answers</button>
